# trace2

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: basic.rs  crate_level.rs  ignore.rs  impl_level.rs
src/: lib.rs
tests/: complex.rs  complex_impl_type.rs  explicit_return_type.rs  generic.rs  ignore.rs  nested.rs  return_box.rs  unreachable.rs
trace2_macro/: Cargo.toml  LICENSE  codegen.rs  config.rs  folder.rs  lib.rs
