[package]
name = "trace2_macro"
version = "0.1.0"
authors = ["Breezewish <me@breeswish.org>"]
repository = "https://github.com/breeswish/trace2"
license = "MIT"
description = "The real proc macro implementation of trace2"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
syn = { version = "0.14", features = ["full", "extra-traits", "fold"] }
proc-macro2 = "0.4"
quote = "0.6"
